--- a/package.json
+++ b/package.json
@@ -9,15 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.1",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.8",
+    "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
+    "pretier": "^0.0.1",
+    "prettier": "^3.2.5",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-progress-steps": "^1.3.4",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-stepper-ui": "^0.0.9",
     "react-native-svg": "^15.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.6",
+    "tailwind-rn": "^4.2.0",
     "typeface-inter": "^3.18.1",
-    "typescript": "^5.3.0"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
