--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^5.2.1",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.1.3",
     "react-native-progress-steps": "^1.3.4",
     "react-native-safe-area-context": "4.10.1",
