--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "pretier": "^0.0.1",
     "prettier": "^3.2.5",
     "react": "18.2.0",
-
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-maps": "^1.15.6",
     "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.1.3",
     "react-native-progress-steps": "^1.3.4",
