--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@expo/vector-icons": "^14.0.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
@@ -21,6 +22,7 @@
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
     "expo": "^51.0.8",
+    "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "pretier": "^0.0.1",
@@ -30,8 +32,10 @@
     "react-icons": "^5.2.1",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.15.6",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-picker-select": "^9.1.3",
     "react-native-progress-steps": "^1.3.4",
     "react-native-safe-area-context": "4.10.1",
