--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-native-fontawesome": "^0.3.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-picker/picker": "^2.7.6",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -23,6 +24,7 @@
     "@types/react": "~18.2.45",
     "expo": "^51.0.8",
     "expo-location": "^17.0.1",
+    "expo-notifications": "~0.28.9",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "pretier": "^0.0.1",
@@ -46,8 +48,7 @@
     "react-native-web": "~0.19.6",
     "tailwind-rn": "^4.2.0",
     "typeface-inter": "^3.18.1",
-    "typescript": "~5.3.3",
-    "expo-notifications": "~0.28.9"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
